flutter_sfu_relay/windows/librelay.h

typedef struct { const char *p; ptrdiff_t n; } _GoString_;
// Ping 回调函数类型
typedef void (*PingCallback)(const char* peerID);
// Callback function types for events
typedef void (*EventCallback)(int eventType, const char* roomId, const char* peerId, const char* data);
typedef void (*LogCallback)(int level, const char* message);
typedef long long GoInt64;
typedef GoInt64 GoInt;
typedef struct { void *t; void *v; } GoInterface;
typedef struct { void *data; GoInt len; GoInt cap; } GoSlice;
// StatsGetLossRate 获取丢包率
//
extern __declspec(dllexport) double StatsGetLossRate(char* roomID);
// NetworkProbeCreate 创建网络探测管理器
//
extern __declspec(dllexport) int NetworkProbeCreate(char* roomID);
// NetworkProbeDestroy 销毁网络探测管理器
//
extern __declspec(dllexport) int NetworkProbeDestroy(char* roomID);
// NetworkProbeGetMetrics 获取指定 Peer 的网络指标
//
extern __declspec(dllexport) char* NetworkProbeGetMetrics(char* roomID, char* peerID);
// NetworkProbeGetAllMetrics 获取所有 Peer 的网络指标
//
extern __declspec(dllexport) char* NetworkProbeGetAllMetrics(char* roomID);
// JitterBufferCreate 创建抖动缓冲
// enabled: 是否启用
// targetDelayMs: 目标延迟（毫秒）
//
extern __declspec(dllexport) int JitterBufferCreate(char* key, int enabled, int targetDelayMs);
// JitterBufferDestroy 销毁抖动缓冲
//
extern __declspec(dllexport) int JitterBufferDestroy(char* key);
// JitterBufferEnable 启用/禁用抖动缓冲
//
extern __declspec(dllexport) int JitterBufferEnable(char* key, int enabled);
// JitterBufferSetDelay 设置目标延迟
//
extern __declspec(dllexport) int JitterBufferSetDelay(char* key, int delayMs);
// JitterBufferFlush 清空缓冲区
//
extern __declspec(dllexport) int JitterBufferFlush(char* key);
// JitterBufferGetStats 获取抖动缓冲统计
//
extern __declspec(dllexport) char* JitterBufferGetStats(char* key);
// JitterBufferIsEnabled 检查是否启用
//
extern __declspec(dllexport) int JitterBufferIsEnabled(char* key);