flutter_sfu_relay/lib/flutter_sfu_relay_bindings_generated.dart


  late final _StatsGetLossRatePtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Pointer<ffi.Char>)>>(
        'StatsGetLossRate',
      );
  late final _StatsGetLossRate =
      _StatsGetLossRatePtr.asFunction<double Function(ffi.Pointer<ffi.Char>)>();

  /// NetworkProbeCreate 创建网络探测管理器
  int NetworkProbeCreate(ffi.Pointer<ffi.Char> roomID) {
    return _NetworkProbeCreate(roomID);
  }

  late final _NetworkProbeCreatePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'NetworkProbeCreate',
      );
  late final _NetworkProbeCreate =
      _NetworkProbeCreatePtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// NetworkProbeDestroy 销毁网络探测管理器
  int NetworkProbeDestroy(ffi.Pointer<ffi.Char> roomID) {
    return _NetworkProbeDestroy(roomID);
  }

  late final _NetworkProbeDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'NetworkProbeDestroy',
      );
  late final _NetworkProbeDestroy =
      _NetworkProbeDestroyPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// NetworkProbeGetMetrics 获取指定 Peer 的网络指标
  ffi.Pointer<ffi.Char> NetworkProbeGetMetrics(
    ffi.Pointer<ffi.Char> roomID,
    ffi.Pointer<ffi.Char> peerID,
  ) {
    return _NetworkProbeGetMetrics(roomID, peerID);
  }

  late final _NetworkProbeGetMetricsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('NetworkProbeGetMetrics');
  late final _NetworkProbeGetMetrics =
      _NetworkProbeGetMetricsPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  /// NetworkProbeGetAllMetrics 获取所有 Peer 的网络指标
  ffi.Pointer<ffi.Char> NetworkProbeGetAllMetrics(
    ffi.Pointer<ffi.Char> roomID,
  ) {
    return _NetworkProbeGetAllMetrics(roomID);
  }

  late final _NetworkProbeGetAllMetricsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('NetworkProbeGetAllMetrics');
  late final _NetworkProbeGetAllMetrics =
      _NetworkProbeGetAllMetricsPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
      >();

  /// JitterBufferCreate 创建抖动缓冲
  /// enabled: 是否启用
  /// targetDelayMs: 目标延迟（毫秒）
  int JitterBufferCreate(
    ffi.Pointer<ffi.Char> key,
    int enabled,
    int targetDelayMs,
  ) {
    return _JitterBufferCreate(key, enabled, targetDelayMs);
  }

  late final _JitterBufferCreatePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int, ffi.Int)
        >
      >('JitterBufferCreate');
  late final _JitterBufferCreate =
      _JitterBufferCreatePtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, int, int)
      >();

  /// JitterBufferDestroy 销毁抖动缓冲
  int JitterBufferDestroy(ffi.Pointer<ffi.Char> key) {
    return _JitterBufferDestroy(key);
  }

  late final _JitterBufferDestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'JitterBufferDestroy',
      );
  late final _JitterBufferDestroy =
      _JitterBufferDestroyPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// JitterBufferEnable 启用/禁用抖动缓冲
  int JitterBufferEnable(ffi.Pointer<ffi.Char> key, int enabled) {
    return _JitterBufferEnable(key, enabled);
  }

  late final _JitterBufferEnablePtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>
      >('JitterBufferEnable');
  late final _JitterBufferEnable =
      _JitterBufferEnablePtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, int)
      >();

  /// JitterBufferSetDelay 设置目标延迟
  int JitterBufferSetDelay(ffi.Pointer<ffi.Char> key, int delayMs) {
    return _JitterBufferSetDelay(key, delayMs);
  }

  late final _JitterBufferSetDelayPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>
      >('JitterBufferSetDelay');
  late final _JitterBufferSetDelay =
      _JitterBufferSetDelayPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>, int)
      >();

  /// JitterBufferFlush 清空缓冲区
  int JitterBufferFlush(ffi.Pointer<ffi.Char> key) {
    return _JitterBufferFlush(key);
  }

  late final _JitterBufferFlushPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'JitterBufferFlush',
      );
  late final _JitterBufferFlush =
      _JitterBufferFlushPtr.asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// JitterBufferGetStats 获取抖动缓冲统计
  ffi.Pointer<ffi.Char> JitterBufferGetStats(ffi.Pointer<ffi.Char> key) {
    return _JitterBufferGetStats(key);
  }

  late final _JitterBufferGetStatsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
        >
      >('JitterBufferGetStats');
  late final _JitterBufferGetStats =
      _JitterBufferGetStatsPtr.asFunction<
        ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>)
      >();

  /// JitterBufferIsEnabled 检查是否启用
  int JitterBufferIsEnabled(ffi.Pointer<ffi.Char> key) {
    return _JitterBufferIsEnabled(key);
  }

  late final _JitterBufferIsEnabledPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
        'JitterBufferIsEnabled',
      );
  late final _JitterBufferIsEnabled =
      _JitterBufferIsEnabledPtr.asFunction<
        int Function(ffi.Pointer<ffi.Char>)
      >();
}

final class _GoString_ extends ffi.Struct {
  external ffi.Pointer<ffi.Char> p;

  @ptrdiff_t()
  external int n;
}

typedef ptrdiff_t = __darwin_ptrdiff_t;
typedef __darwin_ptrdiff_t = ffi.Long;
typedef Dart__darwin_ptrdiff_t = int;
typedef pthread_mutex_t = __darwin_pthread_mutex_t;
typedef __darwin_pthread_mutex_t = _opaque_pthread_mutex_t;

final class _opaque_pthread_mutex_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

/// Ping 回调函数类型
typedef PingCallback = ffi.Pointer<ffi.NativeFunction<PingCallbackFunction>>;
typedef PingCallbackFunction = ffi.Void Function(ffi.Pointer<ffi.Char> peerID);
typedef DartPingCallbackFunction = void Function(ffi.Pointer<ffi.Char> peerID);

/// Callback function types for events
typedef EventCallback = ffi.Pointer<ffi.NativeFunction<EventCallbackFunction>>;
typedef EventCallbackFunction =
    ffi.Void Function(
      ffi.Int eventType,
      ffi.Pointer<ffi.Char> roomId,
      ffi.Pointer<ffi.Char> peerId,
      ffi.Pointer<ffi.Char> data,
    );
typedef DartEventCallbackFunction =
    void Function(
      int eventType,
      ffi.Pointer<ffi.Char> roomId,
      ffi.Pointer<ffi.Char> peerId,
      ffi.Pointer<ffi.Char> data,
    );
typedef LogCallback = ffi.Pointer<ffi.NativeFunction<LogCallbackFunction>>;
typedef LogCallbackFunction =
    ffi.Void Function(ffi.Int level, ffi.Pointer<ffi.Char> message);
typedef DartLogCallbackFunction =
    void Function(int level, ffi.Pointer<ffi.Char> message);

final class GoInterface extends ffi.Struct {
  external ffi.Pointer<ffi.Void> t;

  external ffi.Pointer<ffi.Void> v;
}

final class GoSlice extends ffi.Struct {
  external ffi.Pointer<ffi.Void> data;

  @GoInt()
  external int len;

  @GoInt()
  external int cap;
}

typedef GoInt = GoInt64;
typedef GoInt64 = ffi.LongLong;
typedef DartGoInt64 = int;
